# black_ziji

./: CMakeLists.txt  Makefile  README.md  main.py  requirements.txt
conv_core/: __init__.py  ray_object.py
conv_core/core/: ray_line_wrap.c  ray_line_wrap.pyx  rebin_spectrum_wrapper.c  rebin_spectrum_wrapper.pyx  setup_ray.py  setup_rebin.py
conv_core/core/src/: ray_line.h  rebin_spec.hpp
xillver/: __init__.py  get_xillver_spectrum.py  run.py  xill_object.py
zijiray/: __init__.py  transit.py
zijiray/include/objects/: astro_objects.h
zijiray/src/: main.cc
zijiray/src/lpg/: main.cc
zijiray/src/transit/: main.cc
